src/objects/POS_Item__c.object
<CustomObject>
    <fields>
        <fullName>c_current_flag__c</fullName>
        <label>Current flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_family_group_desc__c</fullName>
        <label>Family group description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_file_prop_cd__c</fullName>
        <label>File property code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_item_desc__c</fullName>
        <label>Item description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_master_group_desc__c</fullName>
        <label>Master group description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <label>Property code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>POS Item</relationshipLabel>
        <relationshipName>POS_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_effective_end_dt__c</fullName>
        <label>Effective end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_effective_start_dt__c</fullName>
        <label>Effective start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i_family_group_id__c</fullName>
        <label>Family group id</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_item_id__c</fullName>
        <label>Item Id</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_master_group_id__c</fullName>
        <label>Master group Id</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POS Item</label>
    <nameField>
        <displayFormat>PIN-{00000}</displayFormat>
        <label>POS Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>